--- a/eww.scss
+++ b/eww.scss
@@ -6,13 +6,16 @@
 
 /** Generic window ***********************************/
 .genwin {
-	background-color: rgba(33, 33, 37, 0.9);
+	background-color: rgba(255, 255, 255, 0.95);
 	border-radius: 30px;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 /** Profile ******************************************/
 .face {
-	background-size: 200px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 	min-height: 200px;
 	min-width: 200px;
 	margin-top: 33px;
@@ -20,7 +23,7 @@
 }
 
 .fullname {
-	color: #EBCB8B;
+	color: #8E44AD;
 	font-size : 30px;
     margin-bottom: 26px;
 	font-weight : bold;
@@ -28,47 +31,36 @@
 
 /** Clock ********************************************/
 .time_hour, .time_min {
-	color: #81A1C1;
-	font-size :65px;
-	font-weight : bold;
-}
-.time_hour {
-	margin : 15px 0px 0px 30px;
-}
-.time_min {
-	margin : 0px 0px 15px 0px;
+	color: #34495E;
+	font-size: 75px;
+	font-weight: bold;
+	margin: 0px 0px 0px 30px;
 }
 
 .time_mer {
-	color: #A3BE8C;
-	font-size : 42px;
-	font-weight : bold;
-	margin : 20px 0px 0px 0px;
+	color: #8E44AD;
+	font-size: 38px;
+	font-weight: bold;
+	margin: 10px 30px 0px 0px;
 }
 
 .time_day {
-	color: #EBCB8B;
-	font-size : 35px;
-	font-weight : normal;
-	margin : 0px 0px 20px 0px;
+	color: #9B59B6;
+	font-size: 32px;
+	font-weight: normal;
+	margin: 0px 30px 10px 0px;
 }
 
 /** Uptime ********************************************/
 .icontimer {
-	color: #B48EAD;
+	color: #8E44AD;
 	font-size : 82px;
 	font-weight : normal;
     margin-right: 8px;
 }
 
-.uphour {
-	color: #E5E9F0;
-	font-size : 35px;
-	font-weight : bold;
-}
-
-.upmin {
-	color: #E5E9F0;
+.uphour, .upmin {
+	color: #34495E;
 	font-size : 35px;
 	font-weight : bold;
 }
